--- a/src/main/resources/assets/gotwood/models/item/apple_door_item.json
+++ b/src/main/resources/assets/gotwood/models/item/apple_door_item.json
@@ -1,7 +1,6 @@
 {
     "parent": "item/generated",
     "textures": {
-        "bottom": "gotwood:blocks/door_apple_lower",
-        "top": "gotwood:blocks/door_apple_upper"
+        "layer0": "gotwood:items/door_apple"
     }
 }
