--- a/.gitignore
+++ b/.gitignore
@@ -20,27 +20,11 @@ build
 # other
 eclipse
 run
-
 CREDITS-fml.txt
-Paulscode SoundSystem CodecIBXM License.txt
+forge-1.11.2-13.20.0.2315-changelog.txt
 LICENSE-new.txt
-forge-1.10.2-12.18.3.2221-changelog.txt
-gradle/wrapper/gradle-wrapper.jar
-gradle/wrapper/gradle-wrapper.properties
-Paulscode IBXM Library License.txt
 MinecraftForge-Credits.txt
-gradlew.bat
-gradlew
-gradle.properties
-.gradle.zip
-shoots.png
-dates.1.png
-dates.0.png
-palm.png
-palette.png
-dates.2.png
-forge-1.10.2-12.18.3.2281-changelog.txt
+Paulscode IBXM Library License.txt
+Paulscode SoundSystem CodecIBXM License.txt
 README.txt
-gradle/wrapper/gradle-wrapper.jar
-src/main/resources/mcmod.info
-src/main/resources/mcmod.info
+secret.json
