--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,13 @@ sourceCompatibility = targetCompatibility = "1.8" // Need this here so eclipse t
 compileJava {
     sourceCompatibility = targetCompatibility = "1.8"
 }
+class Secrets {
+    def data = null
+
+    def getProperty(String key) {
+        return data ? data[key] : ""
+    }
+}
 import groovy.json.JsonSlurper
 def secretFile
 if (System.getenv().SECRET_FILE) {
