--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,9 @@ sourceCompatibility = targetCompatibility = "1.8" // Need this here so eclipse t
 compileJava {
     sourceCompatibility = targetCompatibility = "1.8"
 }
+javadoc {
+    failOnError = false
+}
 class Secrets {
     def data = null
 
