--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ apply plugin: "maven-publish"
 
 
 version = "1.0"
-group = "com.yourname.modid" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
+group = "panda.gotwood" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = "GotWood1.11.2"
 
 sourceCompatibility = targetCompatibility = "1.8" // Need this here so eclipse task generates correctly.
