--- a/build.gradle
+++ b/build.gradle
@@ -12,9 +12,18 @@ apply plugin: "maven-publish"
 //Only edit below this line, the above code adds and enables the necessary things for Forge to be setup.
 
 
-version = "1.0"
+def mod_file = getModFile()
+def mc_version = "1.11.2"
+def short_version = getVersion("VERSION", mod_file)
+version = mc_version + "-" + short_version
+if (System.getenv().BUILD_NUMBER) {
+    version += "." + System.getenv().BUILD_NUMBER
+}
+if (System.getenv().BUILD_NUMBER) {
+    version += "." + System.getenv().BUILD_NUMBER
+}
 group = "panda.gotwood" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
-archivesBaseName = "GotWood1.11.2"
+archivesBaseName = "GotWood"
 
 sourceCompatibility = targetCompatibility = "1.8" // Need this here so eclipse task generates correctly.
 compileJava {
@@ -150,4 +159,41 @@ publishing {
             url secret.url
         }
     }
+}
+
+String getModFile() {
+    String path = ""
+    FileTree tree = fileTree(dir: "src/main/java")
+    tree.include "**/*.java"
+    tree.visit { element ->
+        if (element.file.isFile()) {
+            element.file.eachLine { String s ->
+                s = s.trim()
+                if (s.startsWith("@Mod(")) {
+                    path = "src/main/java/$element.relativePath"
+                }
+            }
+        }
+    }
+    return path
+}
+
+String getVersion(String type, String mod_file) {
+    String major = "0"
+    String revision = "0"
+    String patch = "0"
+    String prefix = "public static final String $type = \""
+    File file = file(mod_file)
+    file.eachLine { String s ->
+        s = s.trim()
+        if (s.startsWith(prefix)) {
+            s = s.substring(prefix.length(), s.length() - 2)
+            String[] pts = s.split("\\.")
+
+            major = pts[0]
+            revision = pts[1]
+            patch = pts[2]
+        }
+    }
+    return "$major.$revision.$patch"
 }
