--- a/build.gradle
+++ b/build.gradle
@@ -192,3 +192,13 @@ String getVersion(String type, String mod_file) {
     }
     return "$major.$revision.$patch"
 }
+
+sonarqube {
+     properties {
+         property "sonar.host.url", secret.sonarHost
+         property "sonar.organization", secret.sonarOrganization
+         property "sonar.login", secret.sonarToken
+         property "sonar.projectName", project.archivesBaseName
+         property "sonar.projectKey", "$project.group:$project.archivesBaseName"
+     }
+ }
