--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ apply plugin: 'net.minecraftforge.gradle.forge'
 apply plugin: "maven-publish"
 //Only edit below this line, the above code adds and enables the necessary things for Forge to be setup.
 
-
+description = "Got Wood?"
 def mod_file = getModFile()
 def mc_version = "1.11.2"
 def short_version = getVersion("VERSION", mod_file)
