--- a/src/main/resources/assets/gotwood/blockstates/apple_leaves.json
+++ b/src/main/resources/assets/gotwood/blockstates/apple_leaves.json
@@ -1,5 +1,14 @@
 {
     "variants": {
-        "normal": { "model": "gotwood:apple_leaves" }
-,"check_decay=true,decayable=false": { "model": "gotwood:apple_leaves" },"check_decay=true,decayable=true": { "model": "gotwood:apple_leaves" },"check_decay=false,decayable=false": { "model": "gotwood:apple_leaves" },"check_decay=false,decayable=true": { "model": "gotwood:apple_leaves" }    }
+        "normal": { "model": "gotwood:apple_leaves" },
+	"check_decay=true,decayable=false,fruit=false": { "model": "gotwood:apple_leaves" },
+	"check_decay=true,decayable=true,fruit=false": { "model": "gotwood:apple_leaves" },
+	"check_decay=false,decayable=false,fruit=false": { "model": "gotwood:apple_leaves" },
+	"check_decay=false,decayable=true,fruit=false": { "model": "gotwood:apple_leaves" },
+
+	"check_decay=true,decayable=false,fruit=true": { "model": "gotwood:apple_leaves_fruit" },
+	"check_decay=true,decayable=true,fruit=true": { "model": "gotwood:apple_leaves_fruit" },
+	"check_decay=false,decayable=false,fruit=true": { "model": "gotwood:apple_leaves_fruit" },
+	"check_decay=false,decayable=true,fruit=true": { "model": "gotwood:apple_leaves_fruit" }
+    }
 }
