--- a/build.gradle
+++ b/build.gradle
@@ -2,38 +2,39 @@ buildscript {
     repositories {
         jcenter()
         maven { url = "http://files.minecraftforge.net/maven" }
-	maven {
-            name = 'gradle'
-            url 'https://plugins.gradle.org/m2/'
+        maven {
+            name = "gradle"
+            url "https://plugins.gradle.org/m2/"
         }
-	
     }
     dependencies {
-        classpath 'net.minecraftforge.gradle:ForgeGradle:2.2-SNAPSHOT'
-	classpath 'org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:2.5'
+        classpath "net.minecraftforge.gradle:ForgeGradle:2.3-SNAPSHOT"
+        classpath "org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:2.5"
     }
 }
-apply plugin: 'net.minecraftforge.gradle.forge'
+apply plugin: "net.minecraftforge.gradle.forge"
 apply plugin: "maven-publish"
-apply plugin: 'org.sonarqube'
-//Only edit below this line, the above code adds and enables the necessary things for Forge to be setup.
+apply plugin: "org.sonarqube"
 
 description = "Got Wood?"
 def mod_file = getModFile()
-def mc_version = "1.11.2"
+def mc_version = "1.12"
 def short_version = getVersion("VERSION", mod_file)
 version = mc_version + "-" + short_version
 
-group = "panda.gotwood" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
+group = "panda.gotwood"
 archivesBaseName = "GotWood"
 
-sourceCompatibility = targetCompatibility = "1.8" // Need this here so eclipse task generates correctly.
+sourceCompatibility = targetCompatibility = JavaVersion.VERSION_1_8 // Need this here so eclipse task generates correctly.
+
 compileJava {
-    sourceCompatibility = targetCompatibility = "1.8"
+    sourceCompatibility = targetCompatibility = JavaVersion.VERSION_1_8
 }
+
 javadoc {
     failOnError = false
 }
+
 class Secrets {
     def data = null
 
@@ -41,6 +42,7 @@ class Secrets {
         return data ? data[key] : ""
     }
 }
+
 import groovy.json.JsonSlurper
 def secretFile
 if (System.getenv().SECRET_FILE) {
@@ -57,58 +59,23 @@ if (secretFile.exists()) {
 }
 
 minecraft {
-    version = "1.12-14.21.1.2404"
+    version = "1.12-14.21.1.2413"
     runDir = "run"
-    
-    // the mappings can be changed at any time, and must be in the following format.
-    // snapshot_YYYYMMDD   snapshot are built nightly.
-    // stable_#            stables are built at the discretion of the MCP team.
-    // Use non-default mappings at your own risk. they may not always work.
-    // simply re-run your setup task after changing the mappings to update your workspace.
-    mappings = "snapshot_20170706"
-    // makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
+    mappings = "snapshot_20170714"
+//  makeObfSourceJar = false
 }
 
-dependencies {
-    // you may put jars on which you depend on in ./libs
-    // or you may define them like so..
-    //compile "some.group:artifact:version:classifier"
-    //compile "some.group:artifact:version"
-      
-    // real examples
-    //compile 'com.mod-buildcraft:buildcraft:6.0.8:dev'  // adds buildcraft to the dev env
-    //compile 'com.googlecode.efficient-java-matrix-library:ejml:0.24' // adds ejml to the dev env
-
-    // the 'provided' configuration is for optional dependencies that exist at compile-time but might not at runtime.
-    //provided 'com.mod-buildcraft:buildcraft:6.0.8:dev'
-
-    // the deobf configurations:  'deobfCompile' and 'deobfProvided' are the same as the normal compile and provided,
-    // except that these dependencies get remapped to your current MCP mappings
-    //deobfCompile 'com.mod-buildcraft:buildcraft:6.0.8:dev'
-    //deobfProvided 'com.mod-buildcraft:buildcraft:6.0.8:dev'
-
-    // for more info...
-    // http://www.gradle.org/docs/current/userguide/artifact_dependencies_tutorial.html
-    // http://www.gradle.org/docs/current/userguide/dependency_management.html
-
-}
+dependencies {}
 
 processResources {
-    // this will ensure that this task is redone when the versions change.
     inputs.property "version", project.version
     inputs.property "mcversion", project.minecraft.version
-
-    // replace stuff in mcmod.info, nothing else
-    from(sourceSets.main.resources.srcDirs) {
-        include 'mcmod.info'
-                
-        // replace version and mcversion
-        expand 'version':project.version, 'mcversion':project.minecraft.version
+    from (sourceSets.main.resources.srcDirs) {
+        include "mcmod.info"
+        expand "version": project.version, "mcversion": project.minecraft.version
     }
-        
-    // copy everything else except the mcmod.info
-    from(sourceSets.main.resources.srcDirs) {
-        exclude 'mcmod.info'
+    from (sourceSets.main.resources.srcDirs) {
+        exclude "mcmod.info"
     }
 }
 
@@ -191,7 +158,6 @@ String getVersion(String type, String mod_file) {
         if (s.startsWith(prefix)) {
             s = s.substring(prefix.length(), s.length() - 2)
             String[] pts = s.split("\\.")
-
             major = pts[0]
             revision = pts[1]
             patch = pts[2]
