--- a/src/main/resources/assets/gotwood/models/item/apple_sapling.json
+++ b/src/main/resources/assets/gotwood/models/item/apple_sapling.json
@@ -1,6 +1,6 @@
 {
     "parent": "item/generated",
     "textures": {
-        "layer0": "gotwood:blocks/sapling_apple"
+        "layer0": "gotwood:blocks/sapling_apple_inv"
     }
 }
