--- a/build.gradle
+++ b/build.gradle
@@ -59,9 +59,9 @@ if (secretFile.exists()) {
 }
 
 minecraft {
-    version = "1.12-14.21.1.2443"
+    version = "1.12.2-14.23.5.2836"
     runDir = "run"
-    mappings = "snapshot_20180709"
+    mappings = "stable_39"
 //  makeObfSourceJar = false
 }
 
